[project]
name = "content-recommendation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "ipywidgets>=8.1.5",
    "matplotlib>=3.10.1",
    "openai>=1.66.3",
    "pandas>=2.2.3",
    "pydantic>=2.10.6",
    "requests[socks]>=2.32.3",
    "tiktoken>=0.9.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
